--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule ".vim/bundle/surround"]
 	path = .vim/bundle/surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule ".vim/bundle/scala"]
+	path = .vim/bundle/scala
+	url = https://github.com/ewiplayer/vim-scala.git
+[submodule ".vim/bundle/scss"]
+	path = .vim/bundle/scss
+	url = https://github.com/cakebaker/scss-syntax.vim.git
