--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,9 @@
 # Fix pbcopy issues
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-set -g default-terminal 'screen-256color'
-
-# Act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
 # Act like screen
-unbind C-b
 set -g prefix C-a
+unbind C-b
 
 # 1 indexed, for keyboards
 set -g base-index 1
@@ -23,7 +11,9 @@ set -g base-index 1
 # renumber windows
 set -g renumber-windows on
 
+# Remove statuses
 set -g status-left ''
 set -g status-right ''
 
+# More history!
 set -g history-limit 10000
