--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,36 @@
-# Fix pbcopy issues
+# Fix copy/paste issues
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Vim pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Set default terminal for colors
+set -g default-terminal "screen-256color"
 
 # Act like screen
 set -g prefix C-a
 unbind C-b
 
+# No escape time!
+set -sg escape-time 0
+
 # 1 indexed, for keyboards
 set -g base-index 1
+
+# Use mouse!
+set -g mode-mouse on
+set -g mouse-select-pane on
 
 # renumber windows
 set -g renumber-windows on
@@ -17,3 +41,6 @@ set -g status-right ''
 
 # More history!
 set -g history-limit 10000
+
+# Proper border colors
+set-option -g pane-border-fg green
