Split .vimrc up into .vim directory and source files for organization

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Resize in smaller increments
+bind -r M-h resize-pane -L 2
+bind -r M-k resize-pane -U 2
+bind -r M-j resize-pane -D 2
+bind -r M-l resize-pane -R 2
+
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
 
