--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Fix copy/paste issues
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-# Setup 'v' to begin selection as in Vim
+># Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
@@ -26,7 +26,9 @@ set -g default-terminal "screen-256color"
 
 # Act like screen
 set -g prefix C-a
-unbind C-b
+unbind-key C-b
+
+bind-key C-a send-prefix
 
 # No escape time!
 set -sg escape-time 0
