--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,14 @@
 [advice]
 	pushNonFastForward = false
 	statusHints = false
+[commit]
+  template = ~/.gitmessage
+[alias]
+  aa = add --all
+  ap = add -i
+  ca = commit --amend
+  ci = commit
+  co = checkout
+  create-branch = !sh -c 'git push origin HEAD:refs/heads/$1 && git fetch origin && git branch --track $1 origin/$1 && cd . && git checkout $1' -
+  delete-branch = !sh -c 'git push origin :refs/heads/$1 && git remote prune origin && git branch -D $1' -
+  
