Fix tmux, change vim/tmux navigation to ctrl + dir
Added new tmux bindings to revert 1.9 changes to go to current directory
instead of root. Added vim plugin and tmux config to use ctrl + h|j|k|l
to go between both vim splits and tmux panes seamlessly. Cleaned up some
bindings, rebound ctrlp to ctrl+p instead of <leader>p. <leader>e now
goes to relative file where <leader>s goes to root both accepting hjkl
directions.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Fix copy/paste issues
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-># Setup 'v' to begin selection as in Vim
+# Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
@@ -20,6 +20,25 @@ bind -r M-h resize-pane -L 2
 bind -r M-k resize-pane -U 2
 bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
+
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+
+# Go back to pre 1.9 split functionality
+unbind-key %
+unbind-key '"'
+
+bind-key % split-window -c "#{pane_current_path}"
+bind-key '"' split-window -hc "#{pane_current_path}"
+
+# Go back to pre 1.9 create window
+unbind-key c
+bind-key c new-window -c "#{pane_current_path}"
 
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
