--- a/.gitconfig
+++ b/.gitconfig
@@ -26,6 +26,7 @@
   co = checkout
   d  = diff
   ds = diff --staged
+  fuckit = !sh -c 'git add --all && git reset --hard'
   create-branch = !sh -c 'git push origin HEAD:refs/heads/$1 && git fetch origin && git branch --track $1 origin/$1 && cd . && git checkout $1' -
   delete-branch = !sh -c 'git push origin :refs/heads/$1 && git remote prune origin && git branch -D $1' -
 [filter "media"]
