--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,11 +22,11 @@ bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
 # smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-h run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Go back to pre 1.9 split functionality
 unbind-key %
@@ -61,12 +61,32 @@ set -g mouse-select-pane on
 # renumber windows
 set -g renumber-windows on
 
-# Remove statuses
-set -g status-left ''
-set -g status-right ''
 
 # More history!
 set -g history-limit 10000
 
-# Proper border colors
-set-option -g pane-border-fg green
+# Better window format
+set -g window-status-format "#W"
+set -g window-status-current-format "#W"
+
+# Update status often
+set -g status-interval 1
+
+# Awesome statusbar
+set -g status-left ''
+set -g status-right "#(nice -n 19 ~/.tmux/status)"
+set -g status-right-length 150
+set -g status-position top
+
+set -g message-bg colour0
+set -g message-fg colour1
+
+set -g pane-border-fg colour11
+set -g pane-active-border-fg colour11
+
+set -g status-bg colour0
+set -g status-fg colour8
+set -g window-status-current-fg colour12
+
+# Status colors
+set-option -g pane-border-fg colour11
