Tmux color and style updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,7 +86,9 @@ set -g pane-active-border-fg colour11
 
 set -g status-bg colour0
 set -g status-fg colour8
-set -g window-status-current-fg colour12
+set -g window-status-current-fg colour5
+
+set -g window-status-separator "  "
 
 # Status colors
 set-option -g pane-border-fg colour11
