--- a/.gitconfig
+++ b/.gitconfig
@@ -26,12 +26,15 @@
   ca = commit --amend
   ci = commit
   co = checkout
+  cb = checkout -b
+  db = branch -d
   d  = diff
   ds = diff --staged
   fuckit = !sh -c 'git add --all && git reset --hard'
-  create-branch = !sh -c 'git push origin HEAD:refs/heads/$1 && git fetch origin && git branch --track $1 origin/$1 && cd . && git checkout $1' -
-  delete-branch = !sh -c 'git push origin :refs/heads/$1 && git remote prune origin && git branch -D $1' -
   up = !git fetch origin && git rebase -i origin/master
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
+[status]
+	branch = 1
+	short = 1
