--- a/.slashemrc
+++ b/.slashemrc
@@ -7,6 +7,7 @@ OPTIONS=scores:5t 2a o,autoquiver,pickup_burden:burdened
 OPTIONS=sound
 OPTIONS=catname:Gerty,DOGNAME:Hudson,horsename:Fuunsaiki
 OPTIONS=wolfname:Jello
+OPTIONS=videocolors:1-2-3-4-5-6-7-7-9-10-11-12-13-14-15
 
 # Patch options
 ## Menu Colors
