Switch up tmux config a bit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,17 +71,17 @@ set -g renumber-windows on
 set -g history-limit 10000
 
 # Better window format
-set -g window-status-format "#W"
-set -g window-status-current-format "#W"
+set -g window-status-format "#I:#W"
+set -g window-status-current-format "#I:#W"
 
 # Update status often
-set -g status-interval 1
+set -g status-interval 3
 
 # Awesome statusbar
 set -g status-left ''
 set -g status-right "#(nice -n 19 ~/.tmux/status)"
 set -g status-right-length 150
-set -g status-position top
+set -g status-position bottom
 
 set -g message-bg colour0
 set -g message-fg colour1
@@ -91,7 +91,7 @@ set -g pane-active-border-fg colour11
 
 set -g status-bg colour0
 set -g status-fg colour8
-set -g window-status-current-fg colour5
+set -g window-status-current-fg colour2
 
 set -g window-status-separator "  "
 
