More minor tweaks to zsh and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,6 +92,7 @@ set -g pane-active-border-fg colour11
 set -g status-bg colour0
 set -g status-fg colour8
 set -g window-status-current-fg colour2
+set -g window-status-bell-style fg=colour1
 
 set -g window-status-separator "  "
 
