--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -108,7 +108,7 @@ time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
-window_title = "WeeChat ${info:version}"
+window_title = "WeeChat"
 
 [palette]
 
@@ -217,7 +217,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = off
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -245,7 +245,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = off
+isetbar.hidden = on
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -301,6 +301,8 @@ title.type = window
 [notify]
 
 [filter]
+hidevoices = on;irc.thoughtbot*;irc_mode;(\-|\+)v
+irc_smart = on;irc.thoughtbot.*;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -412,6 +414,16 @@ meta-a = "/input jump_smart"
 meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
+meta-g0 = "/buffer *10"
+meta-g1 = "/buffer *1"
+meta-g2 = "/buffer *2"
+meta-g3 = "/buffer *3"
+meta-g4 = "/buffer *4"
+meta-g5 = "/buffer *5"
+meta-g6 = "/buffer *6"
+meta-g7 = "/buffer *7"
+meta-g8 = "/buffer *8"
+meta-g9 = "/buffer *9"
 meta-h = "/input hotlist_clear"
 meta-jmeta-l = "/input jump_last_buffer"
 meta-jmeta-r = "/server raw"
