Update ZSH prompt, tmux config
* Update zsh prompt to show branch and pwd on right side
* Rename ~/.zsh/* to have zsh extension
* Remove tmux git experiment

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,9 +79,10 @@ set -g status-interval 3
 
 # Awesome statusbar
 set -g status-left ''
-set -g status-right "#(nice -n 19 ~/.tmux/status)"
+set -g status-right ''
 set -g status-right-length 150
 set -g status-position bottom
+set -g status-justify centre
 
 set -g message-bg colour0
 set -g message-fg colour1
