Dotfiles spring cleaning

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,10 @@ bind-key c new-window -c "#{pane_current_path}"
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
 
+# Use UTF8
+set -g utf8
+set-window-option -g utf8 on
+
 # Act like screen
 set -g prefix C-a
 unbind-key C-b
@@ -69,6 +73,10 @@ set -g renumber-windows on
 
 # More history!
 set -g history-limit 10000
+
+# Report window title
+set -g set-titles on
+set -g set-titles-string "#S:#I - #W"
 
 # Better window format
 set -g window-status-format "#I:#W"
