--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,23 +15,19 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# With ctrl
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
 # Resize in smaller increments
 bind -r M-h resize-pane -L 2
 bind -r M-k resize-pane -U 2
 bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
-# smart pane switching with awareness of vim splits
-# bind -n C-h run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
 
 # Go back to pre 1.9 split functionality
 unbind-key %
@@ -70,7 +66,6 @@ set -g mouse-select-pane on
 # renumber windows
 set -g renumber-windows on
 
-
 # More history!
 set -g history-limit 10000
 
@@ -83,27 +78,23 @@ set -g window-status-format "#I:#W"
 set -g window-status-current-format "#I:#W"
 
 # Update status often
-set -g status-interval 3
+set -g status-interval 10
 
 # Awesome statusbar
 set -g status-left ''
 set -g status-right ''
-set -g status-right-length 150
 set -g status-position bottom
 set -g status-justify centre
 
 set -g message-bg colour0
 set -g message-fg colour1
 
-set -g pane-border-fg colour11
-set -g pane-active-border-fg colour11
+set -g pane-border-fg colour3
+set -g pane-active-border-fg colour3
 
 set -g status-bg colour0
 set -g status-fg colour8
-set -g window-status-current-fg colour2
+set -g window-status-current-fg colour5
 set -g window-status-bell-style fg=colour1
 
 set -g window-status-separator "  "
-
-# Status colors
-set-option -g pane-border-fg colour11
