Update gitconfig, tmux.conf, vimrc
* Add syntastic
* (re) Add tmux/vim integration
* `g ci` is now `g c`
* C-a r to make pane 80 width
* More sane shortcuts

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,6 @@
 [github]
   user = BlakeWilliams
 [format]
-  #pretty = "%C(yellow)%h%Creset - %s%nAuthored by %an%n"
   pretty = "%C(yellow)%h%Creset - %s%nAuthored by %C(green)%an%Creset %ar%n"
 [color]
   ui = true
@@ -27,7 +26,7 @@
   aa = add --all
   ap = add -i
   ca = commit --amend
-  ci = commit -v
+  c  = commit -v
   co = checkout
   cb = checkout -b
   db = branch -d
