--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,11 @@ bind -r M-k resize-pane -U 2
 bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
-bind -n C-\ run "tmux refresh-client -S & (tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Go back to pre 1.9 split functionality
 unbind-key %
@@ -39,6 +43,9 @@ bind-key '"' split-window -hc "#{pane_current_path}"
 # Go back to pre 1.9 create window
 unbind-key c
 bind-key c new-window -c "#{pane_current_path}"
+
+# Resize pane to 80 chars
+bind-key r resize-pane -x 80
 
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
@@ -79,6 +86,9 @@ set -g window-status-current-format "#I:#W"
 
 # Update status often
 set -g status-interval 10
+
+# More scroll
+set -g history-limit 10000
 
 # Awesome statusbar
 set -g status-left ''
