Tons of cleanup and improvements

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,14 @@
 # Fix copy/paste issues
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+# Act like screen
+set -g prefix C-a
+unbind-key C-b
+
+# Use UTF8
+set -g utf8
+set-window-option -g utf8 on
+
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
@@ -9,17 +17,12 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Vim pane navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# With ctrl
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# Pane/Split navigation
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Resize in smaller increments
 bind -r M-h resize-pane -L 2
@@ -27,84 +30,50 @@ bind -r M-k resize-pane -U 2
 bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+unbind-key %                                          # Unbind old horizontal
+bind-key % split-window -c "#{pane_current_path}"     # Horizontal current path
 
-# Go back to pre 1.9 split functionality
-unbind-key %
-unbind-key '"'
+unbind-key '"'                                        # Unbind old vertical
+bind-key '"' split-window -hc "#{pane_current_path}"  # Vertical current path
 
-bind-key % split-window -c "#{pane_current_path}"
-bind-key '"' split-window -hc "#{pane_current_path}"
+unbind-key c                                          # Unbind old create
+bind-key c new-window -c "#{pane_current_path}"       # Create current path
 
-# Go back to pre 1.9 create window
-unbind-key c
-bind-key c new-window -c "#{pane_current_path}"
-
-# Resize pane to 80 chars
-bind-key r resize-pane -x 80
+bind-key r resize-pane -x 80    # Resize pane to 80 chars
+bind-key k clear-history        # Clear Screen
+bind-key C-a send-prefix        # Make C-a C-a work like C-a
 
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
 
-# Use UTF8
-set -g utf8
-set-window-option -g utf8 on
+set -g base-index 1                         # 1 indexed, for keyboards
+set -sg escape-time 0                       # No escape time
+set -g history-limit 10000                  # More sane history limit
+set -g mode-mouse on                        # Enable mouse
+set -g mouse-select-pane on                 # Allow mouse to select panes
+set -g renumber-windows on                  # Automatically renumber windows
+set -g set-titles on                        # Report terminal title
+set -g set-titles-string "#S:#I - #W"       # Terminal title format
+set -g status-interval                      # Update often for status
+set -g window-status-format "#I:#W"         # Window format
+set -g window-status-current-format "#I:#W" # Current window format
 
-# Act like screen
-set -g prefix C-a
-unbind-key C-b
+# Status bar
+set -g status-left ''                               # Disable left status
+set -g status-right "#(nice -n 19 ~/.tmux/status)"  # Run status script
+set -g status-right-length 60                       # Lots of space
+set -g status-position bottom                       # Show on bottom
+set -g status-justify left                          # Left align window list
 
-bind-key C-a send-prefix
+set -g message-bg colour0                           # Always default bg
+set -g message-fg colour1                           # Red highlight on message
 
-# No escape time!
-set -sg escape-time 0
+set -g pane-border-fg colour3                       # Yellow borders
+set -g pane-active-border-fg colour3                # Yellow borders
 
-# 1 indexed, for keyboards
-set -g base-index 1
+set -g status-bg colour0                            # Default bg
+set -g status-fg colour8                            # Gray unselected windows
+set -g window-status-current-fg colour5             # Purple selected windows
+set -g window-status-bell-style fg=colour1          # Red on bell
 
-# Use mouse!
-set -g mode-mouse on
-set -g mouse-select-pane on
-
-# renumber windows
-set -g renumber-windows on
-
-# More history!
-set -g history-limit 10000
-
-# Report window title
-set -g set-titles on
-set -g set-titles-string "#S:#I - #W"
-
-# Better window format
-set -g window-status-format "#I:#W"
-set -g window-status-current-format "#I:#W"
-
-# Update status often
-set -g status-interval 10
-
-# More scroll
-set -g history-limit 10000
-
-# Awesome statusbar
-set -g status-left ''
-set -g status-right ''
-set -g status-position bottom
-set -g status-justify centre
-
-set -g message-bg colour0
-set -g message-fg colour1
-
-set -g pane-border-fg colour3
-set -g pane-active-border-fg colour3
-
-set -g status-bg colour0
-set -g status-fg colour8
-set -g window-status-current-fg colour5
-set -g window-status-bell-style fg=colour1
-
-set -g window-status-separator "  "
+set -g window-status-separator "  "                 # Separate by double space
