--- a/.gitconfig
+++ b/.gitconfig
@@ -3,17 +3,13 @@
   email = blake@blakewilliams.me
 [github]
   user = BlakeWilliams
-[format]
-  pretty = "%C(yellow)%h%Creset - %s%nAuthored by %C(green)%an%Creset %ar%n"
 [color]
   ui = true
+[format]
+  pretty = "%C(yellow)%h%Creset - %s%nAuthored by %C(green)%an%Creset %ar%n"
 [core]
   excludesfile = ~/.excludes
   whitespace = trailing-space,space-before-tab
-[push]
-  default = current
-[merge]
-  ff = only
 [advice]
   pushNonFastForward = false
   statusHints = false
@@ -21,6 +17,12 @@
   template = ~/.gitmessage
 [fetch]
   prune = true
+[push]
+  default = current
+[pull]
+  rebase = true
+[merge]
+  ff = only
 [alias]
   a  = add
   aa = add --all
@@ -32,9 +34,11 @@
   db = branch -d
   d  = diff
   ds = diff --staged
-  fuckit = !sh -c 'git add --all && git reset --hard'
   up = !git fetch origin && git rebase -i origin/master
+  fuckit = !sh -c 'git add --all && git reset --hard'
+  standup = log --since=yesterday --author=\"Blake Williams\"
   pr = !hub pull-request
+  safe = !mkdir .git/safe
 [filter "media"]
   clean = git-media-clean %f
   smudge = git-media-smudge %f
