--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ set -g mouse-select-pane on                 # Allow mouse to select panes
 set -g renumber-windows on                  # Automatically renumber windows
 set -g set-titles on                        # Report terminal title
 set -g set-titles-string "#S:#I - #W"       # Terminal title format
-set -g status-interval                      # Update often for status
+set -g status-interval 1                    # Update often for status
 set -g window-status-format "#I:#W"         # Window format
 set -g window-status-current-format "#I:#W" # Current window format
 
