--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.4.3
+# weechat.conf -- weechat v1.0.1
 #
 
 [debug]
@@ -17,6 +17,8 @@ bar_more_down = "++"
 bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
+bare_display_exit_on_input = on
+bare_display_time_format = "%H:%M"
 buffer_auto_renumber = on
 buffer_notify_default = all
 buffer_position = end
@@ -45,15 +47,16 @@ emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
-hotlist_add_buffer_if_away = on
+hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
 hotlist_buffer_separator = ", "
 hotlist_count_max = 2
 hotlist_count_min_msg = 2
 hotlist_names_count = 3
-hotlist_names_length = 0
+hotlist_names_length = 15
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
 hotlist_prefix = "H: "
+hotlist_remove = merged
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 hotlist_suffix = ""
@@ -78,7 +81,7 @@ paste_bracketed_timer_delay = 10
 paste_max_lines = 1
 prefix_action = " *"
 prefix_align = right
-prefix_align_max = 0
+prefix_align_max = 15
 prefix_align_min = 0
 prefix_align_more = "+"
 prefix_align_more_after = on
@@ -90,11 +93,11 @@ prefix_error = "=!="
 prefix_join = "-->"
 prefix_network = "--"
 prefix_quit = "<--"
-prefix_same_nick = ""
+prefix_same_nick = " "
 prefix_suffix = "|"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "- "
+read_marker_string = "-"
 save_config_on_exit = on
 save_layout_on_exit = none
 scroll_amount = 3
@@ -108,7 +111,7 @@ time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
-window_title = "WeeChat"
+window_title = "weechat"
 
 [palette]
 
@@ -143,7 +146,7 @@ chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = 1
 chat_prefix_suffix = green
-chat_read_marker = magenta
+chat_read_marker = 3
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
@@ -159,7 +162,7 @@ input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
 nicklist_offline = blue
-separator = blue
+separator = 11
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -170,8 +173,9 @@ status_data_other = default
 status_data_private = lightgreen
 status_filter = green
 status_more = yellow
-status_name = white
-status_name_ssl = lightgreen
+status_name = 7
+status_name_ssl = 7
+status_nicklist_count = default
 status_number = yellow
 status_time = default
 
@@ -235,7 +239,7 @@ input.hidden = off
 input.items = ">> input_text"
 input.position = bottom
 input.priority = 1000
-input.separator = on
+input.separator = off
 input.size = 1
 input.size_max = 0
 input.type = window
@@ -265,7 +269,7 @@ nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
 nicklist.size = 0
-nicklist.size_max = 0
+nicklist.size_max = 15
 nicklist.type = window
 status.color_bg = 11
 status.color_delim = cyan
@@ -273,11 +277,11 @@ status.color_fg = 7
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
-status.hidden = on
-status.items = "[time],[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,[lag],[hotlist],completion,scroll"
+status.hidden = off
+status.items = "[time] +buffer_name+(buffer_modes),aspell_suggest,scroll"
 status.position = bottom
 status.priority = 500
-status.separator = off
+status.separator = on
 status.size = 1
 status.size_max = 0
 status.type = window
@@ -287,7 +291,7 @@ title.color_fg = default
 title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
-title.hidden = off
+title.hidden = on
 title.items = "buffer_title"
 title.position = top
 title.priority = 500
@@ -411,123 +415,114 @@ meta2-Z = "/input complete_previous"
 meta2-[E = "/buffer -1"
 meta-_ = "/input redo"
 meta-a = "/input jump_smart"
-meta-b = "/input move_previous_word"
+meta-b = "/window bare"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
-meta-g0 = "/buffer *10"
-meta-g1 = "/buffer *1"
-meta-g2 = "/buffer *2"
-meta-g3 = "/buffer *3"
-meta-g4 = "/buffer *4"
-meta-g5 = "/buffer *5"
-meta-g6 = "/buffer *6"
-meta-g7 = "/buffer *7"
-meta-g8 = "/buffer *8"
-meta-g9 = "/buffer *9"
 meta-h = "/input hotlist_clear"
+meta-j = "/buffer +1"
 meta-jmeta-l = "/input jump_last_buffer"
 meta-jmeta-r = "/server raw"
 meta-jmeta-s = "/server jump"
-meta-j01 = "/buffer 1"
-meta-j02 = "/buffer 2"
-meta-j03 = "/buffer 3"
-meta-j04 = "/buffer 4"
-meta-j05 = "/buffer 5"
-meta-j06 = "/buffer 6"
-meta-j07 = "/buffer 7"
-meta-j08 = "/buffer 8"
-meta-j09 = "/buffer 9"
-meta-j10 = "/buffer 10"
-meta-j11 = "/buffer 11"
-meta-j12 = "/buffer 12"
-meta-j13 = "/buffer 13"
-meta-j14 = "/buffer 14"
-meta-j15 = "/buffer 15"
-meta-j16 = "/buffer 16"
-meta-j17 = "/buffer 17"
-meta-j18 = "/buffer 18"
-meta-j19 = "/buffer 19"
-meta-j20 = "/buffer 20"
-meta-j21 = "/buffer 21"
-meta-j22 = "/buffer 22"
-meta-j23 = "/buffer 23"
-meta-j24 = "/buffer 24"
-meta-j25 = "/buffer 25"
-meta-j26 = "/buffer 26"
-meta-j27 = "/buffer 27"
-meta-j28 = "/buffer 28"
-meta-j29 = "/buffer 29"
-meta-j30 = "/buffer 30"
-meta-j31 = "/buffer 31"
-meta-j32 = "/buffer 32"
-meta-j33 = "/buffer 33"
-meta-j34 = "/buffer 34"
-meta-j35 = "/buffer 35"
-meta-j36 = "/buffer 36"
-meta-j37 = "/buffer 37"
-meta-j38 = "/buffer 38"
-meta-j39 = "/buffer 39"
-meta-j40 = "/buffer 40"
-meta-j41 = "/buffer 41"
-meta-j42 = "/buffer 42"
-meta-j43 = "/buffer 43"
-meta-j44 = "/buffer 44"
-meta-j45 = "/buffer 45"
-meta-j46 = "/buffer 46"
-meta-j47 = "/buffer 47"
-meta-j48 = "/buffer 48"
-meta-j49 = "/buffer 49"
-meta-j50 = "/buffer 50"
-meta-j51 = "/buffer 51"
-meta-j52 = "/buffer 52"
-meta-j53 = "/buffer 53"
-meta-j54 = "/buffer 54"
-meta-j55 = "/buffer 55"
-meta-j56 = "/buffer 56"
-meta-j57 = "/buffer 57"
-meta-j58 = "/buffer 58"
-meta-j59 = "/buffer 59"
-meta-j60 = "/buffer 60"
-meta-j61 = "/buffer 61"
-meta-j62 = "/buffer 62"
-meta-j63 = "/buffer 63"
-meta-j64 = "/buffer 64"
-meta-j65 = "/buffer 65"
-meta-j66 = "/buffer 66"
-meta-j67 = "/buffer 67"
-meta-j68 = "/buffer 68"
-meta-j69 = "/buffer 69"
-meta-j70 = "/buffer 70"
-meta-j71 = "/buffer 71"
-meta-j72 = "/buffer 72"
-meta-j73 = "/buffer 73"
-meta-j74 = "/buffer 74"
-meta-j75 = "/buffer 75"
-meta-j76 = "/buffer 76"
-meta-j77 = "/buffer 77"
-meta-j78 = "/buffer 78"
-meta-j79 = "/buffer 79"
-meta-j80 = "/buffer 80"
-meta-j81 = "/buffer 81"
-meta-j82 = "/buffer 82"
-meta-j83 = "/buffer 83"
-meta-j84 = "/buffer 84"
-meta-j85 = "/buffer 85"
-meta-j86 = "/buffer 86"
-meta-j87 = "/buffer 87"
-meta-j88 = "/buffer 88"
-meta-j89 = "/buffer 89"
-meta-j90 = "/buffer 90"
-meta-j91 = "/buffer 91"
-meta-j92 = "/buffer 92"
-meta-j93 = "/buffer 93"
-meta-j94 = "/buffer 94"
-meta-j95 = "/buffer 95"
-meta-j96 = "/buffer 96"
-meta-j97 = "/buffer 97"
-meta-j98 = "/buffer 98"
-meta-j99 = "/buffer 99"
-meta-k = "/input grab_key_command"
+meta-k = "/buffer -1"
+meta-l01 = "/buffer 1"
+meta-l02 = "/buffer 2"
+meta-l03 = "/buffer 3"
+meta-l04 = "/buffer 4"
+meta-l05 = "/buffer 5"
+meta-l06 = "/buffer 6"
+meta-l07 = "/buffer 7"
+meta-l08 = "/buffer 8"
+meta-l09 = "/buffer 9"
+meta-l10 = "/buffer 10"
+meta-l11 = "/buffer 11"
+meta-l12 = "/buffer 12"
+meta-l13 = "/buffer 13"
+meta-l14 = "/buffer 14"
+meta-l15 = "/buffer 15"
+meta-l16 = "/buffer 16"
+meta-l17 = "/buffer 17"
+meta-l18 = "/buffer 18"
+meta-l19 = "/buffer 19"
+meta-l20 = "/buffer 20"
+meta-l21 = "/buffer 21"
+meta-l22 = "/buffer 22"
+meta-l23 = "/buffer 23"
+meta-l24 = "/buffer 24"
+meta-l25 = "/buffer 25"
+meta-l26 = "/buffer 26"
+meta-l27 = "/buffer 27"
+meta-l28 = "/buffer 28"
+meta-l29 = "/buffer 29"
+meta-l30 = "/buffer 30"
+meta-l31 = "/buffer 31"
+meta-l32 = "/buffer 32"
+meta-l33 = "/buffer 33"
+meta-l34 = "/buffer 34"
+meta-l35 = "/buffer 35"
+meta-l36 = "/buffer 36"
+meta-l37 = "/buffer 37"
+meta-l38 = "/buffer 38"
+meta-l39 = "/buffer 39"
+meta-l40 = "/buffer 40"
+meta-l41 = "/buffer 41"
+meta-l42 = "/buffer 42"
+meta-l43 = "/buffer 43"
+meta-l44 = "/buffer 44"
+meta-l45 = "/buffer 45"
+meta-l46 = "/buffer 46"
+meta-l47 = "/buffer 47"
+meta-l48 = "/buffer 48"
+meta-l49 = "/buffer 49"
+meta-l50 = "/buffer 50"
+meta-l51 = "/buffer 51"
+meta-l52 = "/buffer 52"
+meta-l53 = "/buffer 53"
+meta-l54 = "/buffer 54"
+meta-l55 = "/buffer 55"
+meta-l56 = "/buffer 56"
+meta-l57 = "/buffer 57"
+meta-l58 = "/buffer 58"
+meta-l59 = "/buffer 59"
+meta-l60 = "/buffer 60"
+meta-l61 = "/buffer 61"
+meta-l62 = "/buffer 62"
+meta-l63 = "/buffer 63"
+meta-l64 = "/buffer 64"
+meta-l65 = "/buffer 65"
+meta-l66 = "/buffer 66"
+meta-l67 = "/buffer 67"
+meta-l68 = "/buffer 68"
+meta-l69 = "/buffer 69"
+meta-l70 = "/buffer 70"
+meta-l71 = "/buffer 71"
+meta-l72 = "/buffer 72"
+meta-l73 = "/buffer 73"
+meta-l74 = "/buffer 74"
+meta-l75 = "/buffer 75"
+meta-l76 = "/buffer 76"
+meta-l77 = "/buffer 77"
+meta-l78 = "/buffer 78"
+meta-l79 = "/buffer 79"
+meta-l80 = "/buffer 80"
+meta-l81 = "/buffer 81"
+meta-l82 = "/buffer 82"
+meta-l83 = "/buffer 83"
+meta-l84 = "/buffer 84"
+meta-l85 = "/buffer 85"
+meta-l86 = "/buffer 86"
+meta-l87 = "/buffer 87"
+meta-l88 = "/buffer 88"
+meta-l89 = "/buffer 89"
+meta-l90 = "/buffer 90"
+meta-l91 = "/buffer 91"
+meta-l92 = "/buffer 92"
+meta-l93 = "/buffer 93"
+meta-l94 = "/buffer 94"
+meta-l95 = "/buffer 95"
+meta-l96 = "/buffer 96"
+meta-l97 = "/buffer 97"
+meta-l98 = "/buffer 98"
+meta-l99 = "/buffer 99"
 meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
