--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,14 +30,14 @@ bind -r M-k resize-pane -U 2
 bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
-unbind-key %                                          # Unbind old horizontal
-bind-key % split-window -c "#{pane_current_path}"     # Horizontal current path
+unbind-key %                                                # Unbind old horizontal
+bind-key % split-window -c "#{pane_current_path}"           # Horizontal current path
 
-unbind-key '"'                                        # Unbind old vertical
-bind-key '"' split-window -hc "#{pane_current_path}"  # Vertical current path
+unbind-key '"'                                              # Unbind old vertical
+bind-key '"' split-window -hc "#{pane_current_path}" -l 80  # Vertical current path, 80 width
 
-unbind-key c                                          # Unbind old create
-bind-key c new-window -c "#{pane_current_path}"       # Create current path
+unbind-key c                                                # Unbind old create
+bind-key c new-window -c "#{pane_current_path}"             # Create current path
 
 bind-key r resize-pane -x 80    # Resize pane to 80 chars
 bind-key k clear-history        # Clear Screen
