--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -162,7 +162,7 @@ input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
 nicklist_offline = blue
-separator = 11
+separator = 8
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -221,7 +221,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -239,7 +239,7 @@ input.hidden = off
 input.items = ">> input_text"
 input.position = bottom
 input.priority = 1000
-input.separator = off
+input.separator = on
 input.size = 1
 input.size_max = 0
 input.type = window
@@ -249,7 +249,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = on
+isetbar.hidden = off
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -271,13 +271,13 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 15
 nicklist.type = window
-status.color_bg = 11
+status.color_bg = 10
 status.color_delim = cyan
 status.color_fg = 7
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
-status.hidden = off
+status.hidden = on
 status.items = "[time] +buffer_name+(buffer_modes),aspell_suggest,scroll"
 status.position = bottom
 status.priority = 500
@@ -527,7 +527,6 @@ meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
-meta-s = "/mute aspell toggle"
 meta-u = "/window scroll_unread"
 meta-wmeta-meta2-A = "/window up"
 meta-wmeta-meta2-B = "/window down"
