--- a/.gitconfig
+++ b/.gitconfig
@@ -27,7 +27,7 @@
   a  = add
   aa = add --all
   ap = add -p
-  ca = commit --amend
+  ca = commit --amend -v
   c  = commit -v
   co = checkout
   cb = !sh -c 'git checkout -b $0 && git push -u origin $0'
