--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.0.1
+# weechat.conf -- weechat v1.1.1
 #
 
 [debug]
@@ -90,9 +90,9 @@ prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
 prefix_error = "=!="
-prefix_join = "-->"
+prefix_join = "→"
 prefix_network = "--"
-prefix_quit = "<--"
+prefix_quit = "←"
 prefix_same_nick = " "
 prefix_suffix = "|"
 read_marker = line
@@ -104,7 +104,7 @@ scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
-separator_horizontal = "-"
+separator_horizontal = "—"
 separator_vertical = ""
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
@@ -173,6 +173,7 @@ status_data_other = default
 status_data_private = lightgreen
 status_filter = green
 status_more = yellow
+status_mouse = green
 status_name = 7
 status_name_ssl = 7
 status_nicklist_count = default
@@ -181,6 +182,7 @@ status_time = default
 
 [completion]
 base_word_until_cursor = on
+command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_completer = ":"
