Update tmux status and prefix
* Change prefix from C-a to C-s
* Position tmux status top and center its contents
* Remove tmux branch script
* Remove zsh tmux script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Fix copy/paste issues
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-# Act like screen
-set -g prefix C-a
+# Better prefix
+set -g prefix C-s
 unbind-key C-b
 
 # Use UTF8
@@ -41,7 +41,6 @@ bind-key c new-window -c "#{pane_current_path}"             # Create current pat
 
 bind-key r resize-pane -x 80    # Resize pane to 80 chars
 bind-key k clear-history        # Clear Screen
-bind-key C-a send-prefix        # Make C-a C-a work like C-a
 
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
@@ -60,10 +59,9 @@ set -g window-status-current-format "#I:#W" # Current window format
 
 # Status bar
 set -g status-left ''                               # Disable left status
-set -g status-right "#(nice -n 19 ~/.tmux/status)"  # Run status script
-set -g status-right-length 60                       # Lots of space
-set -g status-position bottom                       # Show on bottom
-set -g status-justify left                          # Left align window list
+set -g status-right ''                              # Disable right status
+set -g status-position top                          # Show on bottom
+set -g status-justify centre                        # Center align window list
 
 set -g message-bg colour0                           # Always default bg
 set -g message-fg colour1                           # Red highlight on message
