--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,12 +17,11 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Pane/Split navigation
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+# Vim pane navigation
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
 # Resize in smaller increments
 bind -r M-h resize-pane -L 2
@@ -45,23 +44,23 @@ bind-key k clear-history        # Clear Screen
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
 
-set -g base-index 1                         # 1 indexed, for keyboards
-set -sg escape-time 0                       # No escape time
-set -g history-limit 10000                  # More sane history limit
-set -g mode-mouse on                        # Enable mouse
-set -g mouse-select-pane on                 # Allow mouse to select panes
-set -g renumber-windows on                  # Automatically renumber windows
-set -g set-titles on                        # Report terminal title
-set -g set-titles-string "#S:#I - #W"       # Terminal title format
-set -g status-interval 1                    # Update often for status
-set -g window-status-format "#I:#W"         # Window format
-set -g window-status-current-format "#I:#W" # Current window format
+set -g base-index 1                             # 1 indexed, for keyboards
+set -sg escape-time 0                           # No escape time
+set -g history-limit 10000                      # More sane history limit
+set -g mode-mouse on                            # Enable mouse
+set -g mouse-select-pane on                     # Allow mouse to select panes
+set -g renumber-windows on                      # Automatically renumber windows
+set -g set-titles on                            # Report terminal title
+set -g set-titles-string "#S:#I - #W"           # Terminal title format
+set -g status-interval 1                        # Update often for status
+set -g window-status-format "#I:#W"             # Window format
+set -g window-status-current-format "#I:#W"     # Current window format
 
 # Status bar
-set -g status-left ''                               # Disable left status
-set -g status-right ''                              # Disable right status
-set -g status-position top                          # Show on bottom
-set -g status-justify centre                        # Center align window list
+set -g status-left ''                                # Disable left status
+set -g status-right ''                               # Disable right status
+set -g status-position bottom                        # Show on bottom
+set -g status-justify left                           # Center align window list
 
 set -g message-bg colour0                           # Always default bg
 set -g message-fg colour1                           # Red highlight on message
@@ -69,9 +68,9 @@ set -g message-fg colour1                           # Red highlight on message
 set -g pane-border-fg colour3                       # Yellow borders
 set -g pane-active-border-fg colour3                # Yellow borders
 
-set -g status-bg colour0                            # Default bg
-set -g status-fg colour8                            # Gray unselected windows
-set -g window-status-current-fg colour5             # Purple selected windows
+set -g status-bg default                            # Default bg
+set -g status-fg colour10                           # Gray unselected windows
+set -g window-status-current-fg colour13            # Purple selected windows
 set -g window-status-bell-style fg=colour1          # Red on bell
 
 set -g window-status-separator "  "                 # Separate by double space
