--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.1.1
+# weechat -- weechat.conf
 #
 
 [debug]
@@ -26,7 +26,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = "${color:12}%l:%M${color:8}%p"
+buffer_time_format = "${color:12}%l:%M%p"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -38,7 +38,9 @@ color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
+command_incomplete = off
 confirm_quit = off
+confirm_upgrade = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
@@ -67,11 +69,13 @@ input_share_overwrite = off
 input_undo_max = 32
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
+item_mouse_status = "M"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
+key_grab_delay = 800
 mouse = on
 mouse_timer_delay = 100
 nick_prefix = ""
@@ -95,6 +99,9 @@ prefix_network = "--"
 prefix_quit = "←"
 prefix_same_nick = " "
 prefix_suffix = "|"
+quote_nick_prefix = "<"
+quote_nick_suffix = ">"
+quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "-"
@@ -112,6 +119,8 @@ window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
 window_title = "weechat"
+word_chars_highlight = "!\u00A0,-,_,|,alnum"
+word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [palette]
 
@@ -128,32 +137,32 @@ chat_highlight_bg = magenta
 chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
-chat_nick = 8
-chat_nick_colors = "1,2,3,4,5,6"
+chat_nick = lightcyan
+chat_nick_colors = "1,2,3,4,5,6,9,10,13"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
 chat_nick_other = cyan
 chat_nick_prefix = green
-chat_nick_self = 8
+chat_nick_self = 12
 chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = default
 chat_prefix_error = yellow
-chat_prefix_join = 2
+chat_prefix_join = lightgreen
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
-chat_prefix_quit = 1
+chat_prefix_quit = lightred
 chat_prefix_suffix = green
-chat_read_marker = 3
+chat_read_marker = magenta
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = 8
-chat_time_delimiters = 8
+chat_time = default
+chat_time_delimiters = brown
 chat_value = cyan
 emphasized = yellow
 emphasized_bg = magenta
@@ -162,7 +171,7 @@ input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
 nicklist_offline = blue
-separator = 8
+separator = 0
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -174,8 +183,8 @@ status_data_private = lightgreen
 status_filter = green
 status_more = yellow
 status_mouse = green
-status_name = 7
-status_name_ssl = 7
+status_name = white
+status_name_ssl = lightgreen
 status_nicklist_count = default
 status_number = yellow
 status_time = default
@@ -223,7 +232,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = off
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -231,7 +240,7 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
-input.color_bg = default
+input.color_bg = 8
 input.color_delim = cyan
 input.color_fg = default
 input.conditions = ""
@@ -251,7 +260,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = off
+isetbar.hidden = on
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
