Add neovim and add minor changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,8 +47,7 @@ set -g default-terminal "screen-256color"
 set -g base-index 1                         # 1 indexed, for keyboards
 set -sg escape-time 0                       # No escape time
 set -g history-limit 10000                  # More sane history limit
-set -g mode-mouse on                        # Enable mouse
-set -g mouse-select-pane on                 # Allow mouse to select panes
+set -g mouse on                             # Enable mouse
 set -g renumber-windows on                  # Automatically renumber windows
 set -g set-titles on                        # Report terminal title
 set -g set-titles-string "#S:#I - #W"       # Terminal title format
