--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -26,7 +26,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = "${color:12}%l:%M%p"
+buffer_time_format = "${color:12}%l:%M${color:8}%p"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -80,6 +80,7 @@ mouse = on
 mouse_timer_delay = 100
 nick_prefix = ""
 nick_suffix = ""
+paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -132,46 +133,46 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = green
-chat_highlight = yellow
-chat_highlight_bg = magenta
+chat_highlight = 0
+chat_highlight_bg = 1
 chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
-chat_nick = lightcyan
-chat_nick_colors = "1,2,3,4,5,6,9,10,13"
+chat_nick = 8
+chat_nick_colors = "1,2,3,4,5,6"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
 chat_nick_other = cyan
 chat_nick_prefix = green
-chat_nick_self = 12
+chat_nick_self = 8
 chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = default
 chat_prefix_error = yellow
-chat_prefix_join = lightgreen
+chat_prefix_join = 2
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
-chat_prefix_quit = lightred
+chat_prefix_quit = 1
 chat_prefix_suffix = green
-chat_read_marker = magenta
+chat_read_marker = 3
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = default
-chat_time_delimiters = brown
+chat_time = 8
+chat_time_delimiters = 8
 chat_value = cyan
+chat_value_null = blue
 emphasized = yellow
 emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
-nicklist_offline = blue
-separator = 0
+separator = 8
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -183,8 +184,8 @@ status_data_private = lightgreen
 status_filter = green
 status_more = yellow
 status_mouse = green
-status_name = white
-status_name_ssl = lightgreen
+status_name = 7
+status_name_ssl = 7
 status_nicklist_count = default
 status_number = yellow
 status_time = default
@@ -240,7 +241,7 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
-input.color_bg = 8
+input.color_bg = default
 input.color_delim = cyan
 input.color_fg = default
 input.conditions = ""
@@ -587,6 +588,8 @@ meta2-D = "/cursor move left"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
 
 [key_mouse]
+@bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
+@bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
