Enable tmux 24 bit colors, remove LS_COLORS duplication

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,10 +5,6 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g prefix C-s
 unbind-key C-b
 
-# Use UTF8
-set -g utf8
-set-window-option -g utf8 on
-
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
@@ -73,3 +69,6 @@ set -g window-status-current-fg colour5             # Purple selected windows
 set -g window-status-bell-style fg=colour1          # Red on bell
 
 set -g window-status-separator "  "                 # Separate by double space
+
+# Settings for true color
+set -ga terminal-overrides ",xterm-256color:Tc"
