--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -13,6 +13,7 @@ sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
+align_multiline_words = on
 bar_more_down = "++"
 bar_more_left = "<<"
 bar_more_right = ">>"
@@ -26,7 +27,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = "${color:12}%l:%M${color:8}%p"
+buffer_time_format = "${color:8}%l:%M${color:8}%p"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -67,6 +68,7 @@ input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
+item_away_message = on
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
@@ -78,6 +80,9 @@ key_bind_safe = on
 key_grab_delay = 800
 mouse = on
 mouse_timer_delay = 100
+nick_color_force = ""
+nick_color_hash = djb2
+nick_color_stop_chars = "_|["
 nick_prefix = ""
 nick_suffix = ""
 paste_auto_add_newline = on
@@ -170,6 +175,7 @@ emphasized = yellow
 emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
+item_away = yellow
 nicklist_away = cyan
 nicklist_group = green
 separator = 8
@@ -195,6 +201,7 @@ base_word_until_cursor = on
 command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
+nick_case_sensitive = off
 nick_completer = ":"
 nick_first_only = off
 nick_ignore_chars = "[]`_-^"
@@ -241,6 +248,20 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
+buflist.color_bg = default
+buflist.color_delim = default
+buflist.color_fg = default
+buflist.conditions = ""
+buflist.filling_left_right = vertical
+buflist.filling_top_bottom = columns_vertical
+buflist.hidden = off
+buflist.items = "buflist"
+buflist.position = left
+buflist.priority = 0
+buflist.separator = on
+buflist.size = 0
+buflist.size_max = 0
+buflist.type = root
 input.color_bg = default
 input.color_delim = cyan
 input.color_fg = default
@@ -348,6 +369,8 @@ ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
+meta-meta-OP = "/bar scroll buflist * b"
+meta-meta-OQ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -380,6 +403,8 @@ meta-OC = "/input move_next_word"
 meta-OD = "/input move_previous_word"
 meta-OF = "/input move_end_of_line"
 meta-OH = "/input move_beginning_of_line"
+meta-OP = "/bar scroll buflist * -100%"
+meta-OQ = "/bar scroll buflist * +100%"
 meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
@@ -590,6 +615,8 @@ meta2-D = "/cursor move left"
 [key_mouse]
 @bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
 @bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
+@bar(buflist):ctrl-wheeldown = "hsignal:buflist_mouse"
+@bar(buflist):ctrl-wheelup = "hsignal:buflist_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
@@ -611,6 +638,8 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
 @item(buffers):button1* = "hsignal:buffers_mouse"
 @item(buffers):button2* = "hsignal:buffers_mouse"
+@item(buflist):button1* = "hsignal:buflist_mouse"
+@item(buflist):button2* = "hsignal:buflist_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
