Update vim colors/synmax, remove reattach-to-username

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,8 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
 # Vim pane navigation
 bind -n C-h select-pane -L
