TypeScript setup, colorscheme changes, rad aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,3 @@
-# Fix copy/paste issues
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # Better prefix
 set -g prefix C-s
 unbind-key C-b
@@ -49,14 +46,14 @@ set -g renumber-windows on                  # Automatically renumber windows
 set -g set-titles on                        # Report terminal title
 set -g set-titles-string "#S - #W"          # Terminal title format
 set -g status-interval 1                    # Update often for status
-set -g window-status-format "#I:#W"         # Window format
-set -g window-status-current-format "#I:#W" # Current window format
+set -g window-status-format "  #I:#W  "         # Window format
+set -g window-status-current-format "  #I:#W  " # Current window format
 
 # Status bar
 set -g status-left ''                                # Disable left status
 set -g status-right ''                               # Disable right status
-set -g status-position bottom                        # Show on bottom
-set -g status-justify left                           # Center align window list
+set -g status-position top                           # Show on bottom
+set -g status-justify centre                         # Center align window list
 
 set -g message-bg colour0                           # Always default bg
 set -g message-fg colour1                           # Red highlight on message
@@ -64,12 +61,16 @@ set -g message-fg colour1                           # Red highlight on message
 set -g pane-border-fg colour3                       # Yellow borders
 set -g pane-active-border-fg colour3                # Yellow borders
 
-set -g status-bg colour0                            # Default bg
+# d5c4a1 for light mode
+# 1d2021 for dark mode
+set -g status-bg "#d5c4a1"                          # Default bg
 set -g status-fg colour8                            # Gray unselected windows
+set -g window-status-bg "#d5c4a1" # Purple selected windows
 set -g window-status-current-fg colour5             # Purple selected windows
+set -g window-status-current-bg colour0             # Purple selected windows
 set -g window-status-bell-style fg=colour1          # Red on bell
 
-set -g window-status-separator "  "                 # Separate by double space
+set -g window-status-separator ""
 
 # Settings for true color
 set -ga terminal-overrides ",xterm-256color:Tc"
