Update tmux, update vim, use vim buffer flow

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,28 +63,22 @@ set -g window-status-format "  #W  "         # Window format
 set -g window-status-current-format " [#W] " # Current window format
 
 # Status bar
-set -g status-left ''                                # Disable left status
-set -g status-right ''                               # Disable right status
-set -g status-position bottom                        # Show on bottom
-set -g status-justify centre                         # Center align window list
+set -g status-left ''
+set -g status-right ''
+set -g status-position bottom
+set -g status-justify centre
+set -g message-style bg=colour0
+set -g message-style fg=colour1
 
-set -g message-bg colour0                           # Always default bg
-set -g message-fg colour1                           # Red highlight on message
+set -g pane-border-style fg=colour3
+set -g pane-active-border-style fg=colour3
+set -g status-style bg=colour0,fg=colour8
+set -g status-style fg=colour8
+set -g window-status-style bg=colour0
+set -g window-status-current-style fg=colour4,bg=colour0
+set -g window-status-bell-style fg=colour1
 
-set -g pane-border-fg colour3                       # Yellow borders
-set -g pane-active-border-fg colour3                # Yellow borders
-
-# d5c4a1 for light mode
-# #1d2021 for dark
-# set -g status-bg "#d5c4a1" # Default bg
-set -g status-bg colour0                            # Gray unselected windows
-set -g status-fg colour8                            # Gray unselected windows
-set -g window-status-bg colour0                     # Regular background
-set -g window-status-current-fg colour4             # Purple selected windows
-set -g window-status-current-bg colour0             # Regular background
-set -g window-status-bell-style fg=colour1          # Red on bell
-
-set -g window-status-separator ""                 # Separate by double space
+set -g window-status-separator ""
 
 # Settings for true color
 set -ga terminal-overrides ",xterm-256color:Tc"
