vim nord, tmux fixes, weechat

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,7 +49,8 @@ bind-key k clear-history        # Clear Screen
 bind-key a set-option status
 
 # Set default terminal for colors
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 set -g base-index 1                         # 1 indexed, for keyboards
 set -sg escape-time 0                       # No escape time
@@ -72,10 +73,9 @@ set -g message-style fg=colour1
 
 set -g pane-border-style fg=colour3
 set -g pane-active-border-style fg=colour3
-set -g status-style bg=colour0,fg=colour8
 set -g status-style fg=colour8
-set -g window-status-style bg=colour0
-set -g window-status-current-style fg=colour4,bg=colour0
+set -g status-style fg=colour8
+set -g window-status-current-style fg=colour4
 set -g window-status-bell-style fg=colour1
 
 set -g window-status-separator ""
