--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -90,8 +90,8 @@ mouse_timer_delay = 100
 nick_color_force = ""
 nick_color_hash = djb2
 nick_color_stop_chars = "_|["
-nick_prefix = ""
-nick_suffix = ""
+nick_prefix = " "
+nick_suffix = " "
 paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
@@ -111,7 +111,8 @@ prefix_join = "→"
 prefix_network = "--"
 prefix_quit = "←"
 prefix_same_nick = " "
-prefix_suffix = "|"
+prefix_same_nick_middle = ""
+prefix_suffix = ""
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = "%H:%M:%S"
@@ -186,7 +187,7 @@ input_text_not_found = red
 item_away = yellow
 nicklist_away = cyan
 nicklist_group = green
-separator = 8
+separator = 7
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -324,7 +325,7 @@ nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
-nicklist.size = 0
+nicklist.size = 16
 nicklist.size_max = 15
 nicklist.type = window
 status.color_bg = 10
@@ -362,7 +363,8 @@ title.type = window
 
 [filter]
 hidevoices = on;irc.thoughtbot*;irc_mode;(\-|\+)v
-irc_smart = on;irc.thoughtbot.*;irc_smart_filter;*
+joinquit = off;*;irc_join,irc_part,irc_quit;*
+irc_smart = on;*;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
